--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 <body>
   //= templates/header.html
   <main>
-
+    //= templates/about.html
+    //= templates/services.html
+    //= templates/whatwedo.html
 
   </main>
 
