--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+  <title>WORKING
+    WITH DESIGN LAB</title>
 </head>
 
 <body>
@@ -14,9 +16,9 @@
     //= templates/about.html
     //= templates/services.html
     //= templates/whatwedo.html
-
+    //= templates/gallery.html
   </main>
-
+  //= templates/footer.html
 </body>
 
 </html>
